Fixed invisible character styling (#9)

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -26,7 +26,7 @@ atom-text-editor {
     box-sizing: border-box;
   }
 
-  .syntax--invisible-character {
+  .invisible-character {
     color: @syntax-invisible-character-color;
   }
 
